--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                 Enhancing the interior to achieve a healthier environment for the people using right
                                 space.
                             </p>
-                            <a href="" class="item-view__link link-item-view">
+                            <a href="" class="item-view__link link-item-view stop-load">
                                 <p class="link-item-view__text">View More</p>
                                 <img src="./scss/img/view/Arrow.svg" alt="arrow" class="link-item-view__img">
                             </a>
@@ -83,7 +83,7 @@
                                 Movable articles that are used to make a room or building suitable for living or
                                 working.
                             </p>
-                            <a href="" class="item-view__link link-item-view">
+                            <a href="" class="item-view__link link-item-view stop-load">
                                 <p class="link-item-view__text">View More</p>
                                 <img src="./scss/img/view/Arrow.svg" alt="arrow" class="link-item-view__img">
                             </a>
@@ -96,7 +96,7 @@
                                 Thin object any finished material applied over a floor structure to provide a walking
                                 surface.
                             </p>
-                            <a href="" class="item-view__link link-item-view">
+                            <a href="" class="item-view__link link-item-view stop-load">
                                 <p class="link-item-view__text">View More</p><img src="./scss/img/view/Arrow.svg"
                                     alt="arrow" class="link-item-view__img">
                             </a>
